Diseño de slider

--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
             </div>
         </div>
         <main>
-            <section class="img-principal">
-                <div>
-                    <a href=""><img src="img/os-boca.jpg" alt=""></a>
-                    <a href=""><img src="img/kr5_bannerdesktop_ok.jpg" alt=""></a>
-                    <a href=""><img src="img/__banner__create_netx_open_sports_1366x600_cta.jpg" alt=""></a>
+            <section class="slider" id="slider-container">
+                <div class="slider_images" id="slider-js">
+                </div>
+                <div class="slider_navigation" id="slider-navigation">  
+
                 </div>
             </section>
-            <section class="cnt-novedades">
+            <section class="ctn-novedades">
                 <h1>NOVEDADES</h1>
                 <div class="img-nov">
                     <a href=""><img src="img/FV4735_0.jpg" alt=""></a>
@@ -313,5 +313,6 @@
             </footer>
         </main>
     </div>
+    <script src="js/slider.js"></script>
 </body>
 </html>
