--- a/index.html
+++ b/index.html
@@ -130,33 +130,6 @@
                         </a>
                         <ul class="">
                             <li>
-                                <a href="">SANDALIAS-OJOTAS</a>
-                            </li>
-                            <li>
-                                <a href="">ZAPATILLAS</a>
-                            </li>
-                            <li>
-                                <a href="">INDUMENTARIA</a>
-                            </li>
-                            <li>
-                              <a href="">ACCESORIOS</a>
-                            </li>
-                            <li>
-                              <a href="">INDUMENTARIA FÚTBOL</a>
-                            </li>
-                        </ul>
-                      </li>   
-                      <li>
-                        <a id="btp"href="" >OFERTAS 
-                            <span class=""></span>
-                        </a>
-                      </li> 
-                      <li>
-                        <a class="dropdown-toggle" id="btp" href="" >COLEGIAL 
-                            <span class=""></span>
-                        </a>
-                        <ul>
-                            <li>
                                 <a href="">RUNNING</a>
                             </li>
                             <li>
@@ -206,6 +179,30 @@
                             </li>
                             <li>
                                 <a href="">PING PONG</a>
+                            </li>
+                        </ul>
+                      </li>   
+                      <li>
+                        <a id="btp"href="" >OFERTAS 
+                            <span class=""></span>
+                        </a>
+                      </li> 
+                      <li>
+                        <a class="dropdown-toggle" id="btp" href="" >COLEGIAL 
+                            <span class=""></span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="">BÁSICOS</a>
+                            </li>
+                            <li>
+                                <a href="">DEPORTIVAS</a>
+                            </li>
+                            <li>
+                                <a href="">FANTASÍA</a>
+                            </li>
+                            <li>
+                              <a href="">MOCHILAS</a>
                             </li>
                         </ul>
                       </li>     
