--- a/index.html
+++ b/index.html
@@ -219,18 +219,21 @@
                 <div class="slider_images" id="slider-js">
                 </div>
                 <div class="slider_navigation" id="slider-navigation">  
-
                 </div>
             </section>
             <section class="ctn-novedades">
                 <h1>NOVEDADES</h1>
-                <div class="img-nov">
-                    <a href=""><img src="img/FV4735_0.jpg" alt=""></a>
-                </div>
+                <section class="slider-mod" id="slider-modelos">
+                    <div class="slider_images_modelos" id="slider-js2"></div>
+                    <div class="slider_zapatillas" id="slider-zapatillas">  </div>
+                    <a href=""></a>
+
+                </section>
             </section>
-            <section class="contenedor-promo">
-                <div>
-                   <a href=""><img src="img/__banner__hombre.jpg" alt=""></a> 
+            <section class="ctn-seccion">
+                <div class="banner">
+                   <a href=""><img src="img/__banner__hombre.jpg" alt="" ></a> 
+                   <a href=""><img src="img/_banner_mujer.jpg" alt=""></a> 
                 </div>
                 <div class="marcas">
                     <a href=""><img src="img/footy.svg" alt=""></a>
@@ -311,5 +314,7 @@
         </main>
     </div>
     <script src="js/slider.js"></script>
+    <script src="js/slider-modelos.js"></script>
 </body>
+
 </html>
