Añado carrusel de marcas

--- a/index.html
+++ b/index.html
@@ -232,11 +232,17 @@
             </section>
             <section class="ctn-seccion">
                 <div class="banner">
-                   <a href=""><img src="img/__banner__hombre.jpg" alt="" ></a> 
-                   <a href=""><img src="img/_banner_mujer.jpg" alt=""></a> 
+                    <div>
+                        <a href=""><img src="img/__banner__hombre.jpg" alt="" ></a> 
+                        <a href=""><img src="img/_banner_mujer.jpg" alt=""></a> 
+                    </div>
+
                 </div>
-                <div class="marcas">
-                    <a href=""><img src="img/footy.svg" alt=""></a>
+                <div class="slider-marcas" id="slider-marcas-conteiner">
+                    <div class="slider_images_marcas" id="slider-js3">
+                    </div>
+                    <div class="slider_navigation_marcas" id="slider-navigation_marcas">  
+                    </div>
                 </div>
                 <div>
                     <a href=""><img src="img/os-banner-450x600.jpg" alt=""></a>
@@ -315,6 +321,8 @@
     </div>
     <script src="js/slider.js"></script>
     <script src="js/slider-modelos.js"></script>
+    <script src="js/slider-marcas.js"></script>
+
 </body>
 
 </html>
