--- a/index.html
+++ b/index.html
@@ -226,17 +226,14 @@
                 <section class="slider-mod" id="slider-modelos">
                     <div class="slider_images_modelos" id="slider-js2"></div>
                     <div class="slider_zapatillas" id="slider-zapatillas">  </div>
-                    <a href=""></a>
-
                 </section>
             </section>
-            <section class="ctn-seccion">
+            <section class="ctn-banners">
                 <div class="banner">
                     <div>
-                        <a href=""><img src="img/__banner__hombre.jpg" alt="" ></a> 
-                        <a href=""><img src="img/_banner_mujer.jpg" alt=""></a> 
+                        <a href=""><img src="img/banner/__banner__hombre.jpg" alt="" ></a> 
+                        <a href=""><img src="img/banner/_banner_mujer.jpg" alt=""></a> 
                     </div>
-
                 </div>
                 <div class="slider-marcas" id="slider-marcas-conteiner">
                     <div class="slider_images_marcas" id="slider-js3">
@@ -244,29 +241,33 @@
                     <div class="slider_navigation_marcas" id="slider-navigation_marcas">  
                     </div>
                 </div>
-                <div>
-                    <a href=""><img src="img/os-banner-450x600.jpg" alt=""></a>
-                    <a href=""><img src="img/os_promo_hickies_banner3_1.jpg" alt=""></a>
+                <div class="promociones">
+                    <div>
+                        <a href=""><img src="img/banner/os-banner-450x600.jpg" alt=""></a>
+                        <a href=""><img src="img/banner/os_promo_hickies_banner3_1.jpg" alt=""></a>
+                        <a href=""><img src="img/banner/os-banner-450x600-colegial.jpg" alt=""></a>                        
+                    </div>
+
                 </div>
                 
             </section>
-            <section class="cnt-recomendado">
-                <div>
-                    <a href=""><img src="img/52107233_0.jpg" alt=""></a>
-                    <a href=""><img src="img/58645002_0.jpg" alt=""></a>
-                    <a href=""><img src="img/DD4423-010_0_4.jpg" alt=""></a>
-                </div>
+            <section>
+                <h1>RECOMENDADOS</h1>
+                <section class="slider-ropa" id="slide-ropa">
+                    <div class="slider_images_ropa" id="slider-js4"></div>
+                    <div class="slider_navigation_ropa" id="slider-ronav">  </div>
+            </section>
             </section>
             <section class="cnt-estilos"> 
-                    <div>
-                        <a href=""><img src="img/disciplinas_futbol.jpg" alt=""></a>
-                        <a href=""><img src="img/disciplinas_moda.jpg" alt=""></a>
+                <div>
+                        <a href=""><img src="img/banner/disciplinas_futbol.jpg" alt=""></a>
+                        <a href=""><img src="img/banner/disciplinas_moda.jpg" alt=""></a>
 
-                    </div>
-                    <div>
-                        <a href=""><img src="img/disciplinas_running.jpg" alt=""></a>
-                        <a href=""><img src="img/disciplinas_verano.jpg" alt=""></a>
-                    </div>
+                        <a href=""><img src="img/banner/disciplinas_running.jpg" alt=""></a>
+                        <a href=""><img src="img/banner/disciplinas_verano.jpg" alt=""></a>
+
+                </div>
+
             </section>
             <section class="newsletter">
                 <div>
@@ -322,7 +323,7 @@
     <script src="js/slider.js"></script>
     <script src="js/slider-modelos.js"></script>
     <script src="js/slider-marcas.js"></script>
-
+    <script src="js/slider-ropa.js"></script>
 </body>
 
 </html>
