Diseño pie de pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Open sports  - Open Sports</title>
     <link  rel="icon" type="image/x-icon" href="img/favicon_1.png" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -270,47 +272,43 @@
 
             </section>
             <section class="newsletter">
-                <div>
-                    <div>
+                    <div class="news">
                         <span>Recibi ofertas y descuentos en tu mail</span>
                         <a type="button" href="">Suscribíte</a>
                     </div>
-                </div>
             </section>
             <footer>
-                <div>
-                    <div>
+                <div class="footer">
+                    <div class="ayuda">
                         <ul>
-                            <li>Seguimiento de pedidos</li>
-                            <li>Cambios y devoluciones</li>
-                            <li>Arrepentimiento de compra</li>
-                            <li>Formas de pago</li>
-                            <li>Información sobre envíos</li>
-                            <li>Asistencia al cliente</li>
+                            <li> <a href="">Seguimiento de pedidos</a> </li>
+                            <li> <a href="">Cambios y devoluciones</a> </li>
+                            <li><a href="">Arrepentimiento de compra</a></li>
+                            <li><a href="">Formas de pago</a></li>
+                            <li><a href="">Información sobre envíos</a></li>
+                            <li><a href="">Asistencia al cliente</a></li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="acerca">
                         <ul>
-                            <li>Acerca de Open Sports</li>
-                            <li>Sucursales</li>
-                            <li>Contacto</li>
-                            <li>Novedades y eventos</li>
-                            <li>Solidarismo</li>
+                            <li><a href="">Acerca de Open Sports</a></li>
+                            <li><a href="">Sucursales</a></li>
+                            <li><a href="">Contacto</a></li>
+                            <li><a href="">Novedades y eventos</a></li>
+                            <li><a href="">Solidarismo</a></li>
                         </ul>
                     </div>
                     <div class="icon">
                         <div>
-                            <ul>
-                                <li><i class='bx bxl-instagram' ></i></li>
-                                <li><i class='bx bxl-facebook-square' ></i></li>
-                                <li><i class='bx bxl-twitter' ></i></li>
-                            </ul>
+                            <a href="https://www.instagram.com/opensportsok/" target="_blank"><i class='bx bxl-instagram bx-md' ></i></a>
+                            <a href="https://twitter.com/opensportsok" target="_blank"><i class='bx bxl-twitter bx-md' ></i></a>
+                            <a href="https://www.facebook.com/opensportsok" target="_blank"><i class='bx bxl-facebook-square bx-md' ></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="legales">
-                    <div>
-                        <span class="copyright">©2020 Stadio Uno S.A.</span>
+                    <div class="leg">
+                        <span class="copyright">©2022 Camila Maturano</span>
                         <span> <a href="">Politica de privacidad</a></span>
                         <span><a href="">Términos y condiciones</a></span>
                         <span>Defensa del consumidor: Para consultas y/o denuncias <a href="">ingrese aquí</a></span>
